# fred-database

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  test_extraction.py
database/: fred_data.db
scripts/: extract_fred_data.py  test_fred_api.py  transform_fred_data.py
src/: __init__.py  config.py  database.py  fred_extractor.py  setup_database.py
